# cpython-vita

./: .gitignore  Makefile.pre.in  build_vita.sh  compile_modules_vita.sh  configure  configure.ac  install_extra_modules.sh
Include/: Python.h  osdefs.h  pyport.h
Include/internal/: pycore_code.h
Lib/: os.py  site.py  subprocess.py  vitapath.py
Lib/importlib/: _bootstrap_external.py
Modules/: Setup  Setup.bootstrap.in  getnameinfo.c  getpath.c  getpath.py  posixmodule.c  socketmodule.c  timemodule.c
Modules/_io/: _iomodule.c  fileio.c
Modules/_multiprocessing/: semaphore.c
Objects/: unicodeobject.c
Parser/: parser.c  peg_api.c  pegen.c
Python/: ceval.c  codecs.c  fileutils.c  frozen.c  import.c  pylifecycle.c  pythonrun.c  random.c  stdlib_module_names.h  thread_pthread.h
Tools/scripts/: freeze_modules.py
sample/: CMakeLists.txt  main.c  main.py
